--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,26 @@
-TODO
+services:
+  backend:
+    image: quotes-back
+    build:
+      context: .
+      dockerfile: dockerfile
+    ports:
+      - "8080:80"
+    environment:
+      - POSTGRES_USER=postgres 
+      - POSTGRES_PASSWORD=postgres 
+      - POSTGRES_HOST=postgres  
+      - POSTGRES_DB=quotes
+  postgres:
+    image: postgres
+    ports:
+      - "4532:5432"
+    environment:
+      - POSTGRES_USER=postgres 
+      - POSTGRES_PASSWORD=postgres 
+      - DB=quotes
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+volumes:
+  postgres-data:
+    
